--- a/MultiPeer/Base.lproj/Main.storyboard
+++ b/MultiPeer/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,9 +15,13 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MultiPeer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5YF-XG-McB">
+                                <rect key="frame" x="0.0" y="49" width="320" height="479"/>
+                                <color key="backgroundColor" red="0.63343677300000001" green="1" blue="0.3451856479" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ffT-uc-stu">
                                 <rect key="frame" x="16" y="20" width="14.5" height="29"/>
                                 <fontDescription key="fontDescription" type="system" weight="thin" pointSize="24"/>
@@ -25,7 +29,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Message" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4gt-qc-tHG">
-                                <rect key="frame" x="16" y="627" width="343" height="40"/>
+                                <rect key="frame" x="16" y="528" width="288" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="gae-ma-4Iw"/>
                                 </constraints>
@@ -36,34 +40,30 @@
                                     <action selector="textFieldDidReturn:" destination="BYZ-38-t0r" eventType="primaryActionTriggered" id="9K8-Kq-oAp"/>
                                 </connections>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="aeX-O2-XoC">
-                                <rect key="frame" x="16" y="81" width="343" height="32"/>
-                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="26"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="ffT-uc-stu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="3EA-Ha-oeh"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aeX-O2-XoC" secondAttribute="trailing" constant="16" id="5iy-Cl-eZs"/>
-                            <constraint firstItem="aeX-O2-XoC" firstAttribute="top" secondItem="ffT-uc-stu" secondAttribute="bottom" constant="32" id="Xrv-in-pvy"/>
+                            <constraint firstItem="4gt-qc-tHG" firstAttribute="top" secondItem="5YF-XG-McB" secondAttribute="bottom" id="Pn2-4p-wyA"/>
+                            <constraint firstItem="5YF-XG-McB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="PzK-vB-GOF"/>
                             <constraint firstItem="4gt-qc-tHG" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" constant="-32" id="dtR-WA-vtF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5YF-XG-McB" secondAttribute="trailing" id="fu7-sE-wLR"/>
+                            <constraint firstItem="5YF-XG-McB" firstAttribute="top" secondItem="ffT-uc-stu" secondAttribute="bottom" id="ltj-XS-PnN"/>
                             <constraint firstItem="4gt-qc-tHG" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ps0-Im-SQz"/>
-                            <constraint firstItem="aeX-O2-XoC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="vWQ-2j-SLK"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="4gt-qc-tHG" secondAttribute="bottom" id="zAf-R4-5cr"/>
                             <constraint firstItem="ffT-uc-stu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zkZ-xu-lPz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="broadcastLabel" destination="aeX-O2-XoC" id="L8K-iq-DR4"/>
                         <outlet property="connectionsLabel" destination="ffT-uc-stu" id="qr6-k8-7PC"/>
+                        <outlet property="messageTableview" destination="5YF-XG-McB" id="YMO-Ed-YLX"/>
                         <outlet property="messageTextField" destination="4gt-qc-tHG" id="xYP-ev-Lo0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="300" y="71"/>
         </scene>
     </scenes>
 </document>
